# SynopticSpread

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  render.yaml
.github/workflows/: ci.yml
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 12589288566b_add_model_point_values.py  39a5ab22268c_initial.py
backend/app/: config.py  database.py  main.py
backend/app/models/: __init__.py  alert.py  divergence.py  model_run.py
backend/app/routers/: admin.py  alerts.py  divergence.py  forecasts.py  verification.py
backend/app/schemas/: alert.py  divergence.py  forecast.py  verification.py
backend/app/services/: alerts.py  scheduler.py
backend/app/services/ingestion/: aigfs.py  base.py  ecmwf.py  gfs.py  hrrr.py  nam.py  rrfs.py
backend/app/services/processing/: grid.py  metrics.py
backend/tests/: conftest.py  test_api.py  test_divergence_pipeline.py  test_grid.py  test_grid_zarr.py  test_history_and_verification.py  test_ingestion.py  test_integration.py  test_metrics.py  test_routers.py  test_scheduler.py  test_seed.py
docs/: BACKEND_ARCHITECTURE.md  FRONTEND_ARCHITECTURE.md  FUTURE_FEATURES.md  INITIAL_PLAN.md  METHODOLOGY.md
frontend/: index.html  package-lock.json  package.json  playwright.config.ts
frontend/e2e/: alerts.spec.ts  dashboard.spec.ts  helpers.ts  map.spec.ts  navigation.spec.ts  timeseries.spec.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/api/: client.ts
scripts/: admin.py  admin.sh
(+16 files in other folders)
